added default autosquash for rebase

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,8 @@
     path =
 [merge]
     ff = only
+[rebase]
+    autosquash = true
 [mergetool "sourcetree"]
     cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
     trustExitCode = true
